--- a/app/src/main/res/layout/fragment_laporan_transaksi.xml
+++ b/app/src/main/res/layout/fragment_laporan_transaksi.xml
@@ -83,6 +83,11 @@
     </RelativeLayout>
 
 
+    <Button
+        android:id="@+id/btn_pdf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PDF"/>
 
 
 </FrameLayout>
