--- a/app/src/main/res/layout/fragment_transaksi_karyawan.xml
+++ b/app/src/main/res/layout/fragment_transaksi_karyawan.xml
@@ -105,14 +105,28 @@
             android:textAlignment="center"
             android:text=" Nama Barang" />
 
-        <EditText
-            android:id="@+id/et_nama"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:hint="Nama Barang"
-            android:text=""/>
+            android:layout_height="50dp"
+            >
 
+            <EditText
+                android:id="@+id/et_nama"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:hint="Nama Barang"
+                android:text=""/>
+
+            <Button
+                android:id="@+id/btn_cari"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/button_shape"
+                android:text="CARI"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
